--- a/assets/scss/_team-member.scss
+++ b/assets/scss/_team-member.scss
@@ -147,6 +147,11 @@
       margin-bottom: 40px;
     }
   }
+  .our-teams {
+    .section-title {
+      margin: 60px 0px;
+    }
+  }
 }
 @media (max-width: 767px) {
   .our-teams {
